# Alita_Robot

./: .codacy.yml  .deepsource.toml  .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .golangci.yml  .goreleaser.dev.yaml  .goreleaser.yaml  .pre-commit-config.yaml  .travis.yml  .travis.yml.bk  AGENTS.md  CLAUDE.md  CLONE_IMPLEMENTATION_TODO.md  CODE_OF_CONDUCT.md  DEAD_CODE_REMOVAL.md  Dockerfile  Dockerfile.gitpod  IMPROVEMENTS.md  LICENSE  LICENSE.md  Makefile  Procfile  README.md  app.json  crowdin.yml  debug.docker-compose.yml  dev-requirements.txt  docker-compose.base.yml  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.yml  doppler.Dockerfile  go.mod  go.sum  goreleaser.Dockerfile  heroku.yml  main  main.go  (+7 more)
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  dependabot-auto-merge.yml  dependabot-native-merge.yml  dependency-review.yml  docker-build.yml  golangci-lint.yml  i18n-check.yml  lint.yml  maintenance.yml  pr-docker-enhanced.yml  pre-commit-autoupdate.yml  release.yml  security.yml  update-docker-readme.yml
alita/: __init__.py  __main__.py  bot_class.py  main.go  sample_config.py  vars.py
alita/config/: README.md  config.go  config_test.go  types.go
alita/database/: __init__.py  afk_db.py  antichannelpin.py  antichannelpin_db.py  antiflood_db.py  antispam_db.py  approve_db.py  blacklist_db.py  chats_db.py  disable_db.py  filters_db.py  greetings_db.py  group_blacklist.py  lang_db.py  notes_db.py  pins_db.py  reporting_db.py  rules_db.py  spam_protect_db.py  users_db.py  warns_db.py
alita/db/: __init__.py  admin_db.go  antiflood_db.go  antispam_db.py  approve_db.py  blacklist_db.py  blacklists_db.go  bot_instances_db.go  bulk_operations.go  cache_helpers.go  cache_prewarming.go  captcha_db.go  captchas_db.go  channels_db.go  chats_db.go  connections_db.go  db.go  devs_db.go  disable_db.go  filters_db.go  greetings_db.go  greetings_db_test.go  lang_db.go  (+21 more)
docker/: alpine  alpine.debug  goreleaser  pr-build
docs/: I18N_TOOLING.md  MIGRATION_MONGO_TO_PSQL.md  PERFORMANCE_OPTIMIZATIONS.md  pagination_migration.md
keys/: key.gpg
locales/: ar_SA.yml  config.yml  cs.yaml  cs.yml  cs_CZ.yml  da.yaml  da.yml  de.yaml  de.yml  de_DE.yml  el.yaml  el.yml  en.json  en.yaml  en.yml  es.yaml  es.yml  es_ES.yml  fi.yaml  fi.yml  fr.yaml  fr.yml  fr_FR.yml  he_IL.yml  hi.yaml  hi.yml  hi_IN.yml  it.yaml  it.yml  it_IT.yml  ja.yaml  ja.yml  nl.yaml  nl.yml  pl.yaml  pl.yml  pl_PL.yml  pt_PT.yml  ro.yaml  ro.yml  (+12 more)
locales_backup_20250809_034002/: config.yml  en.yml
psql/: .gitignore  README.md  migrate.sh  sample.env
scripts/: check_code_keys.py  check_hardcoded_strings.py  check_i18n_keys.py  check_locale_sync.py  clean_i18n.sh  find_duplicate_strings_in_locales.py  flatten_locale_file.py  i18n_keys_not_used.py  lint_i18n.py  migrate_psql.sh  requirements.txt  test_migrations.go
supabase/: config.toml
(+255 files in other folders)
