[tool.poetry]
name = "alita_robot"
version = "0.2.0"
description = "Alita is a Telegram Group management bot made using Pyrogram and Python, which makes it modern and faster than most of the Telegram chat managers."
authors = ["Divkix <techdroidroot@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
asyncio = "^3.4.3"
cachetools = "^4.2.2"
dnspython = "^2.1.0"
gpytranslate = "^1.2.0"
pymongo = "^3.11.4"
pyrogram = "^1.2.9"
python-dateutil = "^2.8.1"
pyyaml = "^5.4.1"
regex = "^2021.8.3"
speedtest-cli = "^2.1.3"
tgcrypto = "^1.2.2"
tswift = "^0.7.0"
ujson = "^4.0.2"
uvloop = "^0.15.2"
wikipedia = "^1.4.0"
pyromod = {git = "https://github.com/usernein/pyromod"}
httpx = {extras = ["http2"], version = "^0.18.1"}

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.8.0"
pre-commit = "^2.13.0"
pyclean = "^2.0.0"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
