[tool.poetry]
name = "alita_robot"
version = "1.5.0"
description = "Alita is a Telegram Group management bot made using Pyrogram and Python, which makes it modern and faster than most of the Telegram chat managers."
authors = ["Divanshu Chauhan <23524935+Divkix@users.noreply.github.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
asyncio = "~=3.4.3"
cachetools = "~=4.2.4"
dnspython = "~=2.1.0"
gpytranslate = "~=1.3.0gpytranslate~=1.3.0"
httpx = {version = "~=0.20.0", extras = ["http2"]}
pymongo = "~=3.12.0"
pyrogram = "~=1.2.9"
python-dateutil = "~=2.8.2"
pyyaml = "~=6.0"
regex = "~=2021.10.8"
speedtest-cli = "~=2.1.3"
tgcrypto = "~=1.2.2"
tswift = "~=0.7.0"
ujson = "~=4.2.0"
wikipedia = "~=1.4.0"
prettyconf = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "~=21.9b0"
isort = "~=5.9.3"
pre-commit = "~=2.15.0"
pyclean = "~=2.0.0"
pylint = "~=2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
