[tool.poetry]
name = "alita_robot"
version = "1.5.0"
description = "Alita is a Telegram Group management bot made using Pyrogram and Python, which makes it modern and faster than most of the Telegram chat managers."
authors = ["Divanshu Chauhan <23524935+Divkix@users.noreply.github.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
asyncio = "^3.4.3"
dnspython = "^2.1.0"
gpytranslate = "^1.3.0"
httpx = {version = "^0.23.0", extras = ["http2"]}
python-dateutil = "^2.8.2"
pyyaml = "^6.0"
speedtest-cli = "^2.1.3"
tgcrypto = "^1.2.2"
tswift = "^0.7.0"
wikipedia = "^1.4.0"
prettyconf = "^2.2.1"
Pyrogram = "^2.0.36"
ujson = "^5.4.0"
regex = "^2022.7.25"
pymongo = "^4.2.0"
cachetools = "^5.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
pre-commit = "^2.20.0"
pyclean = "^2.0.0"
pylint = "^2.11.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
